--- a/todoList.html
+++ b/todoList.html
@@ -7,9 +7,18 @@
 	</head>
 
 	<body>
+		<div id="container">
+			<h1>Todo List</h1>
+			<input type="text">
 
-		<script type="text/javascript" src="assets/js/todos.js">
+			<ul>
+				<li><span>X</span> Save the princess</li>
+				<li><span>X</span> Fight Bowser</li>
+				<li><span>X</span> Eat mushrooms</li>
+			</ul>
+		</div>
 
-		</script>
+
+		<script type="text/javascript" src="assets/js/todos.js"></script>
 	</body>
 </html>
