--- a/todoList.html
+++ b/todoList.html
@@ -5,17 +5,18 @@
     <link rel="stylesheet" type="text/css" href="assets/css/todos.css">
     <script type="text/javascript" src="assets/js/lib/jquery-3.4.1.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/2d0aa1030c.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
 		<div id="container">
-			<h1>To-Do List</h1>
+			<h1>To-Do List <i class="fas fa-plus"></i></h1>
 			<input type="text" placeholder="Add New Todo">
 
 			<ul>
-				<li><span>X</span> Save the princess</li>
-				<li><span>X</span> Fight Bowser</li>
-				<li><span>X</span> Eat mushrooms</li>
+				<li><span><i class="fas fa-trash-alt"></i></span> Save the princess</li>
+				<li><span><i class="fas fa-trash-alt"></i></span> Fight Bowser</li>
+				<li><span><i class="fas fa-trash-alt"></i></span> Eat mushrooms</li>
 			</ul>
 		</div>
 
